crates/sdk-tests/tests/app/declaring_static_not_allowed.stderr
error: declaring new `static` items inside `#[app]` is not supported.
 --> $DIR/declaring_static_not_allowed.rs:3:1
  |
3 | #[app]
  | ^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
