crates/sdk-tests/tests/app/declaring_static_not_allowed.rs
use svm_sdk::app;

#[app]
mod App {
    static N: u32 = 10;
}

fn main() {} 